--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,25 @@
 
 	<title>automaton</title>
 
-	<script src="libraries/p5.js"></script>
-	<script src="libraries/p5.dom.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.js"></script>
 	<script src="sketch.js"></script>
 
-	<style>
-		body {
-			margin:50;
-			padding:0;
-			overflow: hidden;
-			background: black;
-		}
-		canvas {
-			margin:auto;
-		}
-	</style>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+	<div class="container-fluid fill">
+		<div class="row fill">
+			<div id="menu" class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+				<p>Here's some text.</p>
+			</div>
+
+			<div id="main-window" class="col-lg-10 col-md-10 col-sm-12 col-xs-12 padding-0">
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
