--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container-fluid fill">
 		<div class="row fill">
 			<div id="menu" class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-				<p>Here's some text.</p>
+				<h3><span class="badge badge-primary">Cellular Automaton</span></h3>
 			</div>
 
 			<div id="main-window" class="col-lg-10 col-md-10 col-sm-12 col-xs-12 padding-0">
