--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.js"></script>
+	<script src="cellular-automaton.js"></script>
 	<script src="sketch.js"></script>
 	<script src="libraries/p5.easycam.js"></script>
 
