--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text" id="inputGroup-sizing-sm">Core Cells</span>
 								</div>
-								<input id="inputCoreCells" type="text" value="(2,4), (2,5)" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputCoreCells" type="text" value="(5,5), (5,6), (6,5), (6,6)" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<button id="buttonSetInitial" type="button" class="btn btn-light btn-sm">Set Initial</button>
