--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<input id="inputCoreCells" type="text" value="(5,5), (5,6), (6,5), (6,6)" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<button id="buttonSetInitial" type="button" class="btn btn-light btn-sm">Set Initial</button>
+								<input id="buttonSetInitial" type="button" class="btn btn-light btn-sm" value="Set Initial"/>
 							</div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 								</label>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<button id="buttonPropagate" type="button" class="btn btn-light btn-sm">Propagate</button>
+								<input id="buttonPropagate" type="button" class="btn btn-light btn-sm" value="Propagate"/>
 							</div>
 						</div>
 					</div>
