--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Plot Width</span>
+									<span class="input-group-text" id="inputGroup-sizing-sm">Footprint Y</span>
 								</div>
 								<input id="inputPlotWidth" type="number" value=100 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Plot Length</span>
+									<span class="input-group-text" id="inputGroup-sizing-sm">Footprint X</span>
 								</div>
 								<input id="inputPlotLength" type="number" value=100 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 							</div>
@@ -77,18 +77,6 @@
 									<span class="input-group-text" id="inputGroup-sizing-sm">Floors</span>
 								</div>
 								<input id="inputFloors" type="number" value=14 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
-							</div>
-							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
-								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Floor fill %</span>
-								</div>
-								<input id="inputMinFloorFill" type="number" value=50 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
-							</div>
-							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
-								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Vol fill %</span>
-								</div>
-								<input id="inputMinVolFill" type="number" value=50 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 							</div>
 							<div class="dropdown col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<button class="btn btn-light btn-sm btn-block dropdown-toggle" type="button" id="buttonRuleset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
