--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 								</div>
 								<input id="inputCoreCells" type="text" value="(5,5), (5,6), (6,5), (6,6)" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 							</div>
+							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
+								<div class="input-group-prepend">
+									<span class="input-group-text" id="inputGroup-sizing-sm">Dead Cells</span>
+								</div>
+								<input id="inputDeadCells" type="text" value="" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<input id="buttonSetInitial" type="button" class="btn btn-light btn-sm" value="Set Initial"/>
 							</div>
