--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@
 						</div>
 					</div>
 
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:15px">
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<h6 style="color: white; font-family: Lato">Export Options</h6>
+							</div>
+							
+							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<input id="buttonExportLayers" type="button" class="btn btn-light btn-sm" value="Export Layers"/>
+							</div>
+						</div>
+					</div>
+
 					<div id="divAlertMessage" class="alert alert-danger alert-dismissable fixed-bottom col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none">
 					</div>
 
