reverse col order to fix orbit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 	<div class="container-fluid fill">
 		<div class="row fill">
-			<div id="menu" class="container col-lg-2 col-md-3 col-sm-12 col-xs-12">
+			<div id="menu" class="container col-lg-2 col-md-3 col-sm-12 col-xs-12 order-lg-2 order-md-2">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<h4 style="color: white; font-family: Lato">Cellular Automaton</h4>
@@ -158,11 +158,11 @@
 
 					<div id="divAlertMessage" class="alert alert-danger alert-dismissable fixed-bottom col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none">
 					</div>
-
 				</div>
 			</div>
-			<div id="main-window" class="col-lg-10 col-md-9 col-sm-12 col-xs-12 padding-0">
-			</div>
+
+			<div id="main-window" class="col-lg-10 col-md-9 col-sm-12 col-xs-12 order-lg-1 order-md-1 padding-0">
+			</div>	
 		</div>
 	</div>
 </body>
