minor changes to camera

--- a/index.html
+++ b/index.html
@@ -34,46 +34,46 @@
 	<div class="container-fluid fill">
 		<div class="row fill">
 			<div id="menu" class="container col-lg-2 col-md-3 col-sm-12 col-xs-12 order-lg-2 order-md-2">
-				<div class="row">
+				<div class="row" style="font-family: Lato;">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<h4 style="color: white; font-family: Lato">Cellular Automaton</h4>
+						<h4 style="color: white;">Cellular Automaton</h4>
 						<hr size=3px style="border-color: white">
 					</div>
 
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:15px">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:15px;">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h6 style="color: white; font-family: Lato">Initial Generation</h6>
+								<h6 style="color: white;">Initial Generation</h6>
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Footprint Y</span>
+									<span class="input-group-text">Footprint Y</span>
 								</div>
-								<input id="inputPlotWidth" type="number" value=100 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputPlotWidth" type="number" value=100 class="form-control">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Footprint X</span>
+									<span class="input-group-text" >Footprint X</span>
 								</div>
-								<input id="inputPlotLength" type="number" value=100 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputPlotLength" type="number" value=100 class="form-control">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Unit Size</span>
+									<span class="input-group-text" >Unit Size</span>
 								</div>
-								<input id="inputUnitSize" type="number" value=10 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputUnitSize" type="number" value=10 class="form-control">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Core Cells</span>
+									<span class="input-group-text" >Core Cells</span>
 								</div>
-								<input id="inputCoreCells" type="text" value="(5,5), (5,6), (6,5), (6,6)" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputCoreCells" type="text" value="(5,5), (5,6), (6,5), (6,6)" class="form-control">
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Dead Cells</span>
+									<span class="input-group-text" >Dead Cells</span>
 								</div>
-								<input id="inputDeadCells" type="text" value="" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputDeadCells" type="text" value="" class="form-control">
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<input id="buttonSetInitial" type="button" class="btn btn-light btn-sm" value="Set Initial"/>
@@ -84,13 +84,13 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:15px">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h6 style="color: white; font-family: Lato">Propagation</h6>
+								<h6 style="color: white;">Propagation</h6>
 							</div>
 							<div class="input-group input-group-sm col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<div class="input-group-prepend">
-									<span class="input-group-text" id="inputGroup-sizing-sm">Floors</span>
+									<span class="input-group-text" >Floors</span>
 								</div>
-								<input id="inputFloors" type="number" value=14 class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+								<input id="inputFloors" type="number" value=14 class="form-control">
 							</div>
 							<div class="dropdown col-lg-12 col-md-12 col-sm-4 col-xs-6">
 								<button class="btn btn-light btn-sm btn-block dropdown-toggle" type="button" id="buttonRuleset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -114,7 +114,7 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:15px">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h6 style="color: white; font-family: Lato">Render Controls</h6>
+								<h6 style="color: white;">Render Controls</h6>
 							</div>
 
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -146,7 +146,7 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:15px">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h6 style="color: white; font-family: Lato">Export</h6>
+								<h6 style="color: white;">Export</h6>
 							</div>
 							
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
