--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<input id="buttonSetBuildingParameters" type="button" class="btn btn-light btn-sm" value="Set Building Parameters" data-toggle="modal" data-target="#buildingParametersModal" style="width: 100%;"/>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12">
-								<input id="buttonSetInitial" type="button" class="btn btn-light btn-sm" value="Set Initial"/>
+								<input id="buttonSetInitial" type="button" class="btn btn-primary btn-sm" value="Set Initial Generation"/>
 							</div>
 						</div>
 					</div>
@@ -81,7 +81,7 @@
 								<button class="btn btn-light btn-sm btn-block dropdown-toggle" type="button" id="buttonRuleset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									Select Ruleset
 								</button>
-								<div class="dropdown-menu" aria-labelledby="buttonRuleset" id="dropdownRuleset">
+								<div class="dropdown-menu" aria-labelledby="buttonRuleset" id="dropdownRuleset" style="width: 100%;">
 								</div>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12">
@@ -94,7 +94,7 @@
 								</label>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12">
-								<input id="buttonPropagate" type="button" class="btn btn-light btn-sm" value="Propagate"/>
+								<input id="buttonPropagate" type="button" class="btn btn-primary btn-sm" value="Propagate"/>
 							</div>
 						</div>
 					</div>
