--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<input id="buttonSetBuildingParameters" type="button" class="btn btn-light btn-sm" value="Set Building Parameters" data-toggle="modal" data-target="#buildingParametersModal" style="width: 100%;"/>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12">
-								<input id="buttonSetInitial" type="button" class="btn btn-primary btn-sm" value="Set Initial Generation"/>
+								<input id="buttonSetInitial" type="button" class="btn btn-success btn-sm" value="Set Initial Generation"/>
 							</div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 								</label>
 							</div>
 							<div class="input-group col-lg-12 col-md-12 col-sm-12 col-12">
-								<input id="buttonPropagate" type="button" class="btn btn-primary btn-sm" value="Propagate"/>
+								<input id="buttonPropagate" type="button" class="btn btn-success btn-sm" value="Propagate"/>
 							</div>
 						</div>
 					</div>
